bugs has been fixed, and adding some stuff, see desc
countdown overlap fixed, img1 resized, adding a tag hover, changing footer design

--- a/web_project_startup/assets/css/main.css
+++ b/web_project_startup/assets/css/main.css
@@ -8,10 +8,20 @@ html, body {
   max-width: 100%;
   height:100%;
 }
-
+body {
+  background-color: #443e39;
+}
+:not(a){
+  -webkit-user-select: none; /* Safari 3.1+ */
+  -moz-user-select: none; /* Firefox 2+ */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none; /* Standard syntax */
+}
 /* RESPONSIVE */
 * {
   box-sizing: border-box;
+  -webkit-box-sizing:border-box;
+-moz-box-sizing:border-box;
 }
 
 [class*="col-"] {
@@ -79,6 +89,15 @@ row::after {
   div .mySlides img{
     height: 500px;
   }
+  div #clockdiv  div span{
+    padding: 15px;
+
+  }
+  /* END IF desktop */
+}
+
+.viewMap a:hover{
+  font-weight: bold;
 }
 hr {
     display: block;
@@ -99,7 +118,7 @@ hr {
  	letter-spacing:8px;
   font-family: 'Pacifico','Kaushan Script';
 }
-.layout1{
+.header{
   min-height: 100%;
   position: relative;
 	background-repeat: no-repeat;
@@ -111,7 +130,7 @@ hr {
 
 }
 
-.layout2 {
+.back-pattern {
   background-attachment: fixed;
   background-repeat: repeat;
   background-image: url('../images/back-pattern.jpg');
@@ -122,53 +141,48 @@ hr {
   font-family: 'Kalam';
 }
 
-.layout2 p{
+.back-pattern p{
    line-height: 0.8;
    font-family: 'Kalam';
 }
 
-.layout2 a {
+.back-pattern a {
   color: #a35e2a;
 }
 
-.layout3{
-
-  background-image: url('../images/gambar1.jpg');
-  min-height: 400px;
-}
-.layout4{
-  padding: 50px;
-}
-.layout5{
+.footer{
+  line-height: 0.8;
+  color: #e0d1bc;
   text-align: center;
   font-family: 'Kalam';
 }
-.pattern{
-  background-image: url('../images/back-pattern.jpg');
-  background-repeat: repeat;
-  background-size: cover;
-}
+
 /* COUNTDOWN */
 .countdown{
   text-align: center;
 }
 #clockdiv{
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
   font-family: sans-serif;
   color: #fff;
-  display: inline-block;
+
   font-weight: 100;
   text-align: center;
   font-size: 30px;
+
 }
 
 #clockdiv > div{
+  margin: 0px 5px;
   padding: 10px;
   border-radius: 3px;
   background: #bf763f;
   display: inline-block;
 }
 #clockdiv div > span{
-  padding: 15px;
+  padding: 10px;
   display: inline-block;
   align-content: center;
 }
@@ -211,7 +225,11 @@ hr {
   right: 30px;
   bottom:30px;
 }
-
+.audioplay-object:hover{
+-ms-transform: scale(1.1, 1.1); /* IE 9 */
+  -webkit-transform: scale(1.1, 1.1); /* Safari */
+  transform: scale(1.1, 1.1);
+}
 .audioplay-button {
   margin-left: auto;
   margin-right: auto;
@@ -327,4 +345,3 @@ hr {
 }
 
 /*END SlideShow*/
-
